<resources>
    <string name="app_name">Codes</string>
    <string name="action_settings">Settings</string>
    <string name="upd_updateData">Aktualisieren</string>
    <string name="upd_deleteData">Löschen</string>

    <string name="ins_Appl">Anwendung</string>
    <string name="ins_code">Befehl</string>
    <string name="ins_Bez">Bezeichnung</string>
    <string name="ins_Bes">Beschreibung</string>
    <string name="ins_Mod">Modul</string>
    <string name="ins_Proz">Prozess</string>

    <string name="item_Appl_select">Anwendung auswählen</string>
    <string name="item_Appl_insert">Anwendung einfügen</string>
    <string name="item_Appl_delete">Anwendung löschen</string>

    <string name="txt_strBezeichung">Bezeichung</string>
    <string name="txt_strCode">Code</string>
    <string name="txt_strApplikation">Applikation</string>
    <string name="txt_strBeschreibung">Beschreibung</string>
    <string name="txt_strModul">Modul</string>
    <string name="txt_strProzess">Prozess</string>
    <string name="title_activity_main_navigation">MainNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="txt_Navigation">Transaktionen und Anweisungen</string>
    <string name="txt_Entwickler">stefan.schweifer@gmail.com</string>
    <string name="pic_transaktions_Codes">Transaktion Codes</string>
    <string name="txt_Head_Appl">Keine Daten!</string>
    <string name="txt_insert_item">Neuen Wert eingeben!</string>
    <string name="txt_select_Appl">Anwendung auswählen</string>
    <string name="txt_Title_insert_item">Einfügen</string>
    <string name="txt_keine_Anwendung_ausgewählt">Keine Anwendung ausgewählt!</string>

    <string name="btn_negative">Nein</string>
    <string name="btn_positive">Ja</string>
    <string name="btn_abbruch">Abbruch</string>
    <string name="txt_Search">Suche</string>
    <string name="txt_Dataset_already_exists">Datensatz bereits vorhanden!</string>
    <string name="txt_Dataset_inserted">Datensatz eingefügt!</string>
    <string name="action_proc">Prozesse bearbeiten</string>
    <string name="action_modul">Module bearbeiten</string>
</resources>
