<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sap.schweifer.at.tcode.InputActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/view_input_Code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/input_Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ins_code" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/view_input_Bes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_input_Bez">

        <EditText
            android:id="@+id/input_Bes"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/view_input_Bes"
            android:gravity="top"
            android:hint="@string/ins_Bes"
            android:singleLine="false" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/view_input_Bez"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_input_Code">

        <EditText
            android:id="@+id/input_Bez"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/view_input_Code"
            android:hint="@string/ins_Bez" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/input_Mod"
        android:layout_width="80dip"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/but_proz_add"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view_input_Bes"
        android:hint="@string/ins_Mod" />

    <ImageButton
        android:id="@+id/but_mod_add"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/input_Mod"
        android:layout_toStartOf="@+id/input_Proz"
        android:src="@drawable/ic_add_circle_outline_black_18dp" />


    <Spinner
        android:id="@+id/input_Proz"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/but_mod_add"
        android:layout_alignTop="@+id/but_mod_add"
        android:layout_toStartOf="@+id/but_proz_add"
        android:hint="@string/ins_Proz" />

    <ImageButton
        android:id="@+id/but_proz_add"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/view_input_Bes"
        android:layout_below="@+id/view_input_Bes"
        android:src="@drawable/ic_add_circle_outline_black_18dp" />


</merge>